Added imgui_impl_vulkan_with_textures.cpp/.h from Hazel Engine - modified.

--- a/ImGui.vcxproj.filters
+++ b/ImGui.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClInclude Include="backends\imgui_impl_glfw.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="backends\imgui_impl_vulkan.h">
+    <ClInclude Include="backends\imgui_impl_vulkan_with_textures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -65,7 +65,7 @@
     <ClCompile Include="backends\imgui_impl_glfw.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="backends\imgui_impl_vulkan.cpp">
+    <ClCompile Include="backends\imgui_impl_vulkan_with_textures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
