--- a/ImGui.vcxproj.filters
+++ b/ImGui.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="backends\imgui_impl_vulkan_with_textures.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="misc\cpp\imgui_stdlib.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="imgui.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="backends\imgui_impl_vulkan_with_textures.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="misc\cpp\imgui_stdlib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
