--- a/ImGui.vcxproj
+++ b/ImGui.vcxproj
@@ -100,7 +100,7 @@
   <ItemGroup>
     <ClInclude Include="backends\imgui_impl_dx12.h" />
     <ClInclude Include="backends\imgui_impl_glfw.h" />
-    <ClInclude Include="backends\imgui_impl_vulkan_with_textures.h" />
+    <ClInclude Include="backends\imgui_impl_vulkan.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_internal.h" />
@@ -112,7 +112,7 @@
   <ItemGroup>
     <ClCompile Include="backends\imgui_impl_dx12.cpp" />
     <ClCompile Include="backends\imgui_impl_glfw.cpp" />
-    <ClCompile Include="backends\imgui_impl_vulkan_with_textures.cpp" />
+    <ClCompile Include="backends\imgui_impl_vulkan.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
     <ClCompile Include="imgui_draw.cpp" />
